<resources>
    <string name="app_name">Plant Tracker</string>

    <string name="channel_name">Plant Water Needs</string>
    <string name="channel_description">Notify when plants need watering</string>

    <string name="action_settings">Settings</string>
    <string name="title_new_plant">Add New Plant</string>

    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>

    <string name="new_plant_name">Name</string>
    <string name="new_plant_fullname">Full Name</string>
    <string name="select_photo">Select Photo</string>
    <string name="new_plant_last_watered">Last Watered: </string>
    <string name="new_plant_days_to_water">Next Water In (Days): </string>
    <string name="new_plant_sunlight">Sunlight: </string>
    <string name="new_plant_water">Water: </string>
    <string name="new_plant_soil">Soil: </string>
    <string name="new_plant_warnings">Warnings: </string>

    <string name="delete_plant_dialog_1">Would you like to delete the selected plant?</string>
    <string name="delete_plant_dialog_2">Are you sure?</string>

    <string name="water_now">Water Now!</string>
    <string name="water_later">Water Later</string>
    <string name="take_new">Take New</string>
    <string name="select_existing">Select Existing</string>
</resources>
