<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/plant_photo_card"
                app:cardCornerRadius="75dp"
                app:strokeColor="@color/colorWhite">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:id="@+id/plant_photo"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="false"
                    android:src="@drawable/plant"/>

        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_plant_name"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:id="@+id/text_plant_nickname"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    android:id="@+id/edit_text_plant_nickname"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_plant_fullname"
                    android:textStyle="italic"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/text_plant_fullname"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    android:id="@+id/edit_text_plant_fullname"/>

        </RelativeLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal">

            <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:padding="2dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="fitCenter"
                    android:background="@color/colorBackground"
                    android:src="@drawable/rubbish"
                    android:id="@+id/btn_delete_plant"/>

            <ImageButton
                android:id="@+id/btn_edit_plant"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:background="@color/colorBackground"
                android:scaleType="fitCenter"
                android:src="@drawable/pencil" />

            <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:scaleType="fitCenter"
                    android:background="@color/colorBackground"
                    android:src="@drawable/watering_can"
                    android:id="@+id/btn_water_plant"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:minWidth="20dp"
                android:src="@drawable/last_water"
                android:id="@+id/last_watered_icon"/>

            <TextView
                android:id="@+id/last_watered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:minWidth="20dp"
                android:src="@drawable/next_water"
                android:id="@+id/next_water_icon"/>

            <TextView
                android:id="@+id/next_water_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:minWidth="20dp"
                android:src="@drawable/sun"
                android:id="@+id/sun_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/sunlight"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:id="@+id/edit_sunlight"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:minWidth="20dp"
                android:src="@drawable/water"
                android:id="@+id/water_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/water"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:id="@+id/edit_water"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:minWidth="20dp"
                android:src="@drawable/fertilizer"
                android:id="@+id/soil_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/soil"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:id="@+id/edit_soil"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:minWidth="20dp"
                android:src="@drawable/alert"
                android:id="@+id/warning_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/warnings"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:id="@+id/edit_warnings"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp"
                    android:text="@string/save"
                    android:visibility="gone"
                    android:id="@+id/btn_save"/>

            <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/btn_save"
                    android:layout_margin="10dp"
                    android:text="@string/cancel"
                    android:visibility="gone"
                    android:id="@+id/btn_cancel"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>